Исправляет имя наставника в Readme и имя переменной в index.html

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   var getFireballSpeed = function (left) {
     var fireballSpeed = 5;
     if (!left) {
-      speed = 2;
+      fireballSpeed = 2;
     }
     return fireballSpeed;
   };
