--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
     return height / 3 - getWizardHeight(wizardWidth);
   }
 </script>
+<script src="js/dialog.js"></script>
 <script src="js/setup.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
