--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
     return height / 3 - getWizardHeight(wizardWidth);
   }
 </script>
+<script src="js/backend.js"></script>
 <script src="js/data.js"></script>
 <script src="js/util.js"></script>
 <script src="js/dialog.js"></script>
